<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF8EF"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linear_style"
                android:layout_margin="@dimen/image_padding"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/image_padding"
                    android:layout_weight="1"
                    android:src="@drawable/music" />

                <Button
                    android:id="@+id/songs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:background="@color/background_color_button"
                    android:layout_margin="@dimen/image_padding"
                    android:text="@string/songs"
                    style="@style/text_style"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linear_style"
                android:layout_margin="@dimen/image_padding"
                android:orientation="vertical">

                <ImageView
                    android:layout_margin="@dimen/image_padding"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/karaoke" />

                <Button
                    android:id="@+id/artists"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text_style"
                    android:background="@color/background_color_button"
                    android:layout_margin="@dimen/image_padding"
                    android:gravity="center_vertical"
                    android:text="@string/artists"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linear_style"
                android:layout_margin="@dimen/image_padding"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/image_padding"
                    android:layout_weight="1"
                    android:src="@drawable/disc" />

                <Button
                    android:id="@+id/album"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text_style"
                    android:background="@color/background_color_button"
                    android:layout_margin="@dimen/image_padding"
                    android:gravity="center_vertical"
                    android:text="@string/album"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linear_style"
                android:layout_margin="@dimen/image_padding"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/image_padding"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:src="@drawable/playlist" />

                <Button
                    android:id="@+id/playlist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/text_style"
                    android:background="@color/background_color_button"
                    android:layout_margin="@dimen/image_padding"
                    android:gravity="center_vertical"
                    android:text="@string/playlist"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
